kubernetes/ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: argo-webhook-ingress
  namespace: argo
  annotations:
    ingress.kubernetes.io/ssl-redirect: 'true'
    certbot.kubernetes.secrets.aws/elb-dns-name: ac631832ab44011e98a300afd8baa461-988247704.us-east-1.elb.amazonaws.com
    certbot.kubernetes.secrets.aws/elb-region: us-east-1
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: argo.k8s.bouweceunen.com
    http:
      paths:
      - path: /webhook
        backend:
          serviceName: argo-webhook
          servicePort: webhook
  tls:
  - secretName: argo-cert
